--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
 </head>
+
 <body>
-    
+    <header>
+        <iframe src="/partials/header.html" width="100%" class="auto-height-iframe"></iframe>
+    </header>
 </body>
+
 </html>
