--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <header>
-        <iframe src="/partials/header.html" width="100%" class="auto-height-iframe"></iframe>
-    </header>
+    <object>
+        <iframe class="auto-height-iframe" src="partials/navigation.html" width="100%"></iframe>
+    </object>
 </body>
 
 </html>
