--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <object>
+    <header>
         <iframe class="auto-height-iframe" src="partials/navigation.html" width="100%"></iframe>
-    </object>
+    </header>
+    <script src="javascript.js"></script>
 </body>
 
 </html>
