--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <iframe class="auto-height-iframe" src="partials/navigation.html" width="100%"></iframe>
     </header>
     <script src="javascript.js"></script>
+    <main>
+        <section class="banner">
+        </section>
+    </main>
 </body>
 
 </html>
