--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -15,8 +15,11 @@
     <script src="javascript.js"></script>
     <main>
         <section class="banner">
+            <h1>Unleash the Happiness!</h1>
         </section>
     </main>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum rem, beatae a dicta eum omnis quaerat quam non,
+        provident, aperiam aliquid maxime quo in blanditiis hic harum nesciunt ab deserunt!</div>
 </body>
 
 </html>
