--- a/products.html
+++ b/products.html
@@ -28,6 +28,15 @@
             <p>Category: Toys</p>
             <button class="cart-button">Add to Cart</button>
         </div>
+        <div class="grooming-card">
+            <img src="images/grooming-kit.webp" alt="dog grooming">
+            <h1>Deluxe Grooming Kit</h1>
+            <p class="price">$29.99</p>
+            <p>Includes brushes, nail clippers, and organic shampoo. Suitable for all coat types, ensuring a shiny and
+                healthy fur.</p>
+            <p>Category: Grooming</p>
+            <button class="cart-button">Add to Cart</button>
+        </div>
     </div>
 </body>
 
