--- a/products.html
+++ b/products.html
@@ -9,35 +9,59 @@
 </head>
 
 <body>
-    <div class="product-container">
-        <div class="bed-card">
-            <img src="images/pet-bed.webp" alt="bed">
-            <h1>Cozy Calming Bed</h1>
-            <p class="price">$19.99</p>
-            <p>Ultra-soft plush material, designed to mimic the comfort of a mother's fur. Machine washable and comes in
-                three sizes.</p>
-            <p>Category: Beds&Furniture</p>
-            <button class="cart-button">Add to Cart</button>
+    <header>
+        <iframe class="auto-height-iframe" src="partials/navigation.html" width="100%"></iframe>
+    </header>
+    <script src="javascript.js"></script>
+    <main>
+        <div class="product-container">
+            <div class="product-card bed">
+                <img src="images/pet-bed.webp" alt="bed">
+                <h1>Cozy Calming Bed</h1>
+                <p class="price">$19.99</p>
+                <p>Ultra-soft plush material, designed to mimic the comfort of a mother's fur. Machine washable and
+                    comes in
+                    three sizes.</p>
+                <p>Category: Beds & Furniture</p>
+                <button class="cart-button">Add to Cart</button>
+            </div>
+            <div class="product-card chew">
+                <img src="images/chew-toy.jpeg" alt="chew toy">
+                <h1>Durable Chew Toy</h1>
+                <p class="price">$9.99</p>
+                <p>Made with pet-safe fibers, helps with teething and keeps dogs entertained for hours. Ideal for
+                    tug-of-war.</p>
+                <p>Category: Toys</p>
+                <button class="cart-button">Add to Cart</button>
+            </div>
+            <div class="product-card grooming">
+                <img src="images/grooming.jpeg" alt="dog grooming">
+                <h1>Deluxe Grooming Kit</h1>
+                <p class="price">$29.99</p>
+                <p>Includes brushes, nail clippers, and organic shampoo. Suitable for all coat types, ensuring a shiny
+                    and
+                    healthy fur.</p>
+                <p>Category: Grooming</p>
+                <button class="cart-button">Add to Cart</button>
+            </div>
+            <div class="product-card treats">
+                <img src="images/dog-treats.webp" alt="dog eating treats">
+                <h1>Organic Chicken Jerky Treats</h1>
+                <p class="price">$19.99</p>
+                <p>High-protein, grain-free snacks made from 100% organic chicken, with no added preservatives.</p>
+                <p>Category: Food & Treats</p>
+                <button class="cart-button">Add to Cart</button>
+            </div>
+            <div class="product-card feeder">
+                <img src="images/puzzle-cat.webp" alt="cat solving a puzzle">
+                <h1>Interactive Puzzle Feeder</h1>
+                <p class="price">$24.99</p>
+                <p>Stimulates your pet's brain, slows down eating to aid digestion, and is dishwasher safe.</p>
+                <p>Category: Food & Treats</p>
+                <button class="cart-button">Add to Cart</button>
+            </div>
         </div>
-        <div class="chew-card">
-            <img src="images/chew-toy.jpeg" alt="chew toy">
-            <h1>Durable Chew Toy</h1>
-            <p class="price">$9.99</p>
-            <p>Made with pet-safe fibers, helps with teething and keeps dogs entertained for hours. Ideal for
-                tug-of-war.</p>
-            <p>Category: Toys</p>
-            <button class="cart-button">Add to Cart</button>
-        </div>
-        <div class="grooming-card">
-            <img src="images/grooming-kit.webp" alt="dog grooming">
-            <h1>Deluxe Grooming Kit</h1>
-            <p class="price">$29.99</p>
-            <p>Includes brushes, nail clippers, and organic shampoo. Suitable for all coat types, ensuring a shiny and
-                healthy fur.</p>
-            <p>Category: Grooming</p>
-            <button class="cart-button">Add to Cart</button>
-        </div>
-    </div>
+    </main>
 </body>
 
 </html>
