add more product cards

--- a/products.html
+++ b/products.html
@@ -46,7 +46,7 @@
             </div>
             <div class="product-card treats">
                 <img src="images/dog-treats.webp" alt="dog eating treats">
-                <h1>Organic Chicken Jerky Treats</h1>
+                <h1>Chicken Jerky Treats</h1>
                 <p class="price">$19.99</p>
                 <p>High-protein, grain-free snacks made from 100% organic chicken, with no added preservatives.</p>
                 <p>Category: Food & Treats</p>
@@ -58,6 +58,26 @@
                 <p class="price">$24.99</p>
                 <p>Stimulates your pet's brain, slows down eating to aid digestion, and is dishwasher safe.</p>
                 <p>Category: Food & Treats</p>
+                <button class="cart-button">Add to Cart</button>
+            </div>
+            <div class="product-card collar">
+                <img src="images/dog-collar.webp" alt="dog with a collar">
+                <h1>Reflective Safety Collar</h1>
+                <p class="price">$12.99</p>
+                <p>Adjustable, comes with a reflective strip for night walks, and includes a tag for personalization.
+                </p>
+                <p>Category: Accesories</p>
+                <button class="cart-button">Add to Cart</button>
+            </div>
+            <div class="product-card catnip">
+                <img src="images/catnip.webp" alt="cat with catnip">
+                <h1>Catnip Infused Scratch Post</h1>
+                <p class="price">$34.99</p>
+                <p>This scratch post is made with durable sisal fibers, ideal for encouraging your cat's natural
+                    scratching instincts. It's infused with catnip to attract and keep your cat's interest, helping to
+                    protect your furniture from scratches. The post also includes a hanging toy for added playtime fun.
+                </p>
+                <p>Category: Accesories</p>
                 <button class="cart-button">Add to Cart</button>
             </div>
         </div>
