update product cards

--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
     </header>
     <script src="javascript.js"></script>
     <main>
-        <div class="product-container">
+        <div class="product-container-firstrow">
             <div class="product-card bed">
                 <img src="images/pet-bed.webp" alt="bed">
                 <h1>Cozy Calming Bed</h1>
@@ -52,6 +52,8 @@
                 <p>Category: Food & Treats</p>
                 <button class="cart-button">Add to Cart</button>
             </div>
+        </div>
+        <div class="product-container-secondrow">
             <div class="product-card feeder">
                 <img src="images/puzzle-cat.webp" alt="cat solving a puzzle">
                 <h1>Interactive Puzzle Feeder</h1>
@@ -78,6 +80,38 @@
                     protect your furniture from scratches. The post also includes a hanging toy for added playtime fun.
                 </p>
                 <p>Category: Accesories</p>
+                <button class="cart-button">Add to Cart</button>
+            </div>
+            <div class="product-card waterbottle">
+                <img src="images/poratbledogwaterbottle.jpg" alt="dog with water bottle">
+                <h1>Portable Water Bottle</h1>
+                <p class="price">$19.99</p>
+                <p>Leak-proof, holds up to 20oz of water, and comes with a foldable bowl cap. Perfect for walks and
+                    hikes.
+                </p>
+                <p>Category: Accesories</p>
+                <button class="cart-button">Add to Cart</button>
+            </div>
+        </div>
+        <div class="product-container-thirdrow">
+            <div class="product-card wastebag">
+                <img src="images/poop-bag.png" alt="eco-friendly waste bag">
+                <h1>Eco-Friendly Poop Bags</h1>
+                <p class="price">$6.99</p>
+                <p>Biodegradable bags that are strong, leak-proof, and come with a handy dispenser that attaches to a
+                    leash.
+                </p>
+                <p>Category: Cleanup & Odor Control</p>
+                <button class="cart-button">Add to Cart</button>
+            </div>
+            <div class="product-card carrier">
+                <img src="images/cat-carrier.webp" alt="cat in pet carrier">
+                <h1>Luxury Pet Carrier</h1>
+                <p class="price">$59.99</p>
+                <p>Stylish design, breathable mesh windows, and plush bedding inside. Approved by most airlines for
+                    in-cabin travel.
+                </p>
+                <p>Category: Accessories</p>
                 <button class="cart-button">Add to Cart</button>
             </div>
         </div>
