--- a/products.html
+++ b/products.html
@@ -14,52 +14,63 @@
     </header>
     <script src="javascript.js"></script>
     <main>
-        <div class="product-container-firstrow">
+        <div class="product-container">
             <div class="product-card bed">
                 <img src="images/pet-bed.webp" alt="bed">
                 <h1>Cozy Calming Bed</h1>
-                <p class="price">$19.99</p>
-                <p>Ultra-soft plush material, designed to mimic the comfort of a mother's fur. Machine washable and
-                    comes in
-                    three sizes.</p>
-                <p>Category: Beds & Furniture</p>
+                <div class="product-info">
+                    <p class="price">$19.99</p>
+                    <p>Ultra-soft plush material, designed to mimic the comfort of a mother's fur. Machine washable and
+                        comes in
+                        three sizes.</p>
+                    <p>Category: Beds & Furniture</p>
+                </div>
                 <button class="cart-button">Add to Cart</button>
             </div>
             <div class="product-card chew">
                 <img src="images/chew-toy.jpeg" alt="chew toy">
                 <h1>Durable Chew Toy</h1>
-                <p class="price">$9.99</p>
-                <p>Made with pet-safe fibers, helps with teething and keeps dogs entertained for hours. Ideal for
-                    tug-of-war.</p>
-                <p>Category: Toys</p>
+                <div class="product-info">
+                    <p class="price">$9.99</p>
+                    <p>Made with pet-safe fibers, helps with teething and keeps dogs entertained for hours. Ideal for
+                        tug-of-war.</p>
+                    <p>Category: Toys</p>
+                </div>
                 <button class="cart-button">Add to Cart</button>
             </div>
             <div class="product-card grooming">
                 <img src="images/grooming.jpeg" alt="dog grooming">
                 <h1>Deluxe Grooming Kit</h1>
-                <p class="price">$29.99</p>
-                <p>Includes brushes, nail clippers, and organic shampoo. Suitable for all coat types, ensuring a shiny
-                    and
-                    healthy fur.</p>
-                <p>Category: Grooming</p>
+                <div class="product-info">
+                    <p class="price">$29.99</p>
+                    <p>Includes brushes, nail clippers, and organic shampoo. Suitable for all coat types, ensuring a
+                        shiny
+                        and
+                        healthy fur.</p>
+                    <p>Category: Grooming</p>
+                </div>
                 <button class="cart-button">Add to Cart</button>
             </div>
             <div class="product-card treats">
                 <img src="images/dog-treats.webp" alt="dog eating treats">
                 <h1>Chicken Jerky Treats</h1>
-                <p class="price">$19.99</p>
-                <p>High-protein, grain-free snacks made from 100% organic chicken, with no added preservatives.</p>
-                <p>Category: Food & Treats</p>
+                <div class="product-info">
+                    <p class="price">$19.99</p>
+                    <p>High-protein, grain-free snacks made from 100% organic chicken, with no added preservatives.</p>
+                    <p>Category: Food & Treats</p>
+                </div>
                 <button class="cart-button">Add to Cart</button>
             </div>
-        </div>
-        <div class="product-container-secondrow">
+
             <div class="product-card feeder">
                 <img src="images/puzzle-cat.webp" alt="cat solving a puzzle">
-                <h1>Interactive Puzzle Feeder</h1>
-                <p class="price">$24.99</p>
-                <p>Stimulates your pet's brain, slows down eating to aid digestion, and is dishwasher safe.</p>
-                <p>Category: Food & Treats</p>
+                <h1>Puzzle Feeder</h1>
+                <div class="product-info">
+                    <p class="price">$24.99</p>
+                    <p>Stimulates your pet's brain, slows down eating to aid digestion, and is dishwasher safe. Purrfect
+                        for your pet!</p>
+                    <p>Category: Food & Treats</p>
+                </div>
                 <button class="cart-button">Add to Cart</button>
             </div>
             <div class="product-card collar">
@@ -76,8 +87,7 @@
                 <h1>Catnip Infused Scratch Post</h1>
                 <p class="price">$34.99</p>
                 <p>This scratch post is made with durable sisal fibers, ideal for encouraging your cat's natural
-                    scratching instincts. It's infused with catnip to attract and keep your cat's interest, helping to
-                    protect your furniture from scratches. The post also includes a hanging toy for added playtime fun.
+                    scratching instincts. It's infused with catnip to attract and keep your cat's interest.
                 </p>
                 <p>Category: Accesories</p>
                 <button class="cart-button">Add to Cart</button>
@@ -92,8 +102,7 @@
                 <p>Category: Accesories</p>
                 <button class="cart-button">Add to Cart</button>
             </div>
-        </div>
-        <div class="product-container-thirdrow">
+
             <div class="product-card wastebag">
                 <img src="images/poop-bag.png" alt="eco-friendly waste bag">
                 <h1>Eco-Friendly Poop Bags</h1>
