fix product info

--- a/products.html
+++ b/products.html
@@ -75,52 +75,64 @@
             </div>
             <div class="product-card collar">
                 <img src="images/dog-collar.webp" alt="dog with a collar">
-                <h1>Reflective Safety Collar</h1>
-                <p class="price">$12.99</p>
-                <p>Adjustable, comes with a reflective strip for night walks, and includes a tag for personalization.
-                </p>
-                <p>Category: Accesories</p>
+                <h1>Safety Collar</h1>
+                <div class="product-info">
+                    <p class="price">$12.99</p>
+                    <p>Adjustable, comes with a reflective strip for night walks, and includes a tag for
+                        personalization.
+                    </p>
+                    <p>Category: Accesories</p>
+                </div>
                 <button class="cart-button">Add to Cart</button>
             </div>
             <div class="product-card catnip">
                 <img src="images/catnip.webp" alt="cat with catnip">
-                <h1>Catnip Infused Scratch Post</h1>
-                <p class="price">$34.99</p>
-                <p>This scratch post is made with durable sisal fibers, ideal for encouraging your cat's natural
-                    scratching instincts. It's infused with catnip to attract and keep your cat's interest.
-                </p>
-                <p>Category: Accesories</p>
+                <h1>Catnip Scratch Post</h1>
+                <div class="product-info">
+                    <p class="price">$34.99</p>
+                    <p>This scratch post is made with durable sisal fibers, ideal for encouraging your cat's natural
+                        scratching instincts; infused with catnip.
+                    </p>
+                    <p>Category: Accesories</p>
+                </div>
                 <button class="cart-button">Add to Cart</button>
             </div>
             <div class="product-card waterbottle">
                 <img src="images/poratbledogwaterbottle.jpg" alt="dog with water bottle">
-                <h1>Portable Water Bottle</h1>
-                <p class="price">$19.99</p>
-                <p>Leak-proof, holds up to 20oz of water, and comes with a foldable bowl cap. Perfect for walks and
-                    hikes.
-                </p>
-                <p>Category: Accesories</p>
+                <div class="product-info">
+                    <h1>Portable Water Bottle</h1>
+                    <p class="price">$19.99</p>
+                    <p>Leak-proof, holds up to 20oz of water, and comes with a foldable bowl cap. Perfect for walks and
+                        hikes.
+                    </p>
+                    <p>Category: Accesories</p>
+                </div>
                 <button class="cart-button">Add to Cart</button>
             </div>
 
             <div class="product-card wastebag">
                 <img src="images/poop-bag.png" alt="eco-friendly waste bag">
-                <h1>Eco-Friendly Poop Bags</h1>
-                <p class="price">$6.99</p>
-                <p>Biodegradable bags that are strong, leak-proof, and come with a handy dispenser that attaches to a
-                    leash.
-                </p>
-                <p>Category: Cleanup & Odor Control</p>
+                <h1>Eco-Waste Bags</h1>
+                <div class="product-info">
+                    <p class="price">$6.99</p>
+                    <p>Biodegradable bags that are strong, leak-proof, and come with a handy dispenser that attaches to
+                        a
+                        leash.
+                    </p>
+                    <p>Category: Cleanup & Odor Control</p>
+                </div>
                 <button class="cart-button">Add to Cart</button>
             </div>
             <div class="product-card carrier">
                 <img src="images/cat-carrier.webp" alt="cat in pet carrier">
                 <h1>Luxury Pet Carrier</h1>
-                <p class="price">$59.99</p>
-                <p>Stylish design, breathable mesh windows, and plush bedding inside. Approved by most airlines for
-                    in-cabin travel.
-                </p>
-                <p>Category: Accessories</p>
+                <div class="product-info">
+                    <p class="price">$59.99</p>
+                    <p>Stylish design, breathable mesh windows, and plush bedding inside. Approved by most airlines for
+                        in-cabin travel.
+                    </p>
+                    <p>Category: Accessories</p>
+                </div>
                 <button class="cart-button">Add to Cart</button>
             </div>
         </div>
