--- a/index.html
+++ b/index.html
@@ -14,8 +14,20 @@
     </header>
     <script src="javascript.js"></script>
     <main>
-        <section class="banner">
-            <h1>Unleash the Happiness!</h1>
+        <section class="banner-container">
+            <div class="banner-photo">
+
+            </div>
+            <div class="banner-text">
+                <h1>Bestsellers for your best friend!</h1>
+                <h2>Discover our <strong>most loved</strong> pet essentials:</h2>
+                <ul>
+                    <li>Cozy beds</li>
+                    <li>Chew toys</li>
+                    <li>Grooming kits</li>
+                    <li>Organic treats</li>
+                </ul>
+            </div>
         </section>
     </main>
 </body>
