update aside products iframe

--- a/products.html
+++ b/products.html
@@ -13,127 +13,140 @@
         <iframe class="auto-height-iframe" src="partials/navigation.html" width="100%"></iframe>
     </header>
     <script src="javascript.js"></script>
+
     <main>
-        <div class="product-container">
-            <div class="product-card bed">
-                <img src="images/pet-bed.webp" alt="bed">
-                <h1>Cozy Calming Bed</h1>
-                <div class="product-info">
-                    <p class="price">$19.99</p>
-                    <p>Ultra-soft plush material, designed to mimic the comfort of a mother's fur. Machine washable and
-                        comes in
-                        three sizes.</p>
-                    <p>Category: Beds & Furniture</p>
+        <div class="wrapper">
+            <aside>
+                <iframe src="partials/aside-products.html" class="products-aside"></iframe>
+            </aside>
+            <div class="product-container">
+                <div class="product-card bed">
+                    <img src="images/pet-bed.webp" alt="bed">
+                    <h1>Cozy Calming Bed</h1>
+                    <div class="product-info">
+                        <p class="price">$19.99</p>
+                        <p>Ultra-soft plush material, designed to mimic the comfort of a mother's fur. Machine washable
+                            and
+                            comes in
+                            three sizes.</p>
+                        <p>Category: Beds & Furniture</p>
+                    </div>
+                    <button class="cart-button">Add to Cart</button>
                 </div>
-                <button class="cart-button">Add to Cart</button>
-            </div>
-            <div class="product-card chew">
-                <img src="images/chew-toy.jpeg" alt="chew toy">
-                <h1>Durable Chew Toy</h1>
-                <div class="product-info">
-                    <p class="price">$9.99</p>
-                    <p>Made with pet-safe fibers, helps with teething and keeps dogs entertained for hours. Ideal for
-                        tug-of-war.</p>
-                    <p>Category: Toys</p>
+                <div class="product-card chew">
+                    <img src="images/chew-toy.jpeg" alt="chew toy">
+                    <h1>Durable Chew Toy</h1>
+                    <div class="product-info">
+                        <p class="price">$9.99</p>
+                        <p>Made with pet-safe fibers, helps with teething and keeps dogs entertained for hours. Ideal
+                            for
+                            tug-of-war.</p>
+                        <p>Category: Toys</p>
+                    </div>
+                    <button class="cart-button">Add to Cart</button>
                 </div>
-                <button class="cart-button">Add to Cart</button>
-            </div>
-            <div class="product-card grooming">
-                <img src="images/grooming.jpeg" alt="dog grooming">
-                <h1>Deluxe Grooming Kit</h1>
-                <div class="product-info">
-                    <p class="price">$29.99</p>
-                    <p>Includes brushes, nail clippers, and organic shampoo. Suitable for all coat types, ensuring a
-                        shiny
-                        and
-                        healthy fur.</p>
-                    <p>Category: Grooming</p>
+                <div class="product-card grooming">
+                    <img src="images/grooming.jpeg" alt="dog grooming">
+                    <h1>Deluxe Grooming Kit</h1>
+                    <div class="product-info">
+                        <p class="price">$29.99</p>
+                        <p>Includes brushes, nail clippers, and organic shampoo. Suitable for all coat types, ensuring a
+                            shiny
+                            and
+                            healthy fur.</p>
+                        <p>Category: Grooming</p>
+                    </div>
+                    <button class="cart-button">Add to Cart</button>
                 </div>
-                <button class="cart-button">Add to Cart</button>
-            </div>
-            <div class="product-card treats">
-                <img src="images/dog-treats.webp" alt="dog eating treats">
-                <h1>Chicken Jerky Treats</h1>
-                <div class="product-info">
-                    <p class="price">$19.99</p>
-                    <p>High-protein, grain-free snacks made from 100% organic chicken, with no added preservatives.</p>
-                    <p>Category: Food & Treats</p>
+                <div class="product-card treats">
+                    <img src="images/dog-treats.webp" alt="dog eating treats">
+                    <h1>Chicken Jerky Treats</h1>
+                    <div class="product-info">
+                        <p class="price">$19.99</p>
+                        <p>High-protein, grain-free snacks made from 100% organic chicken, with no added preservatives.
+                        </p>
+                        <p>Category: Food & Treats</p>
+                    </div>
+                    <button class="cart-button">Add to Cart</button>
                 </div>
-                <button class="cart-button">Add to Cart</button>
-            </div>
 
-            <div class="product-card feeder">
-                <img src="images/puzzle-cat.webp" alt="cat solving a puzzle">
-                <h1>Puzzle Feeder</h1>
-                <div class="product-info">
-                    <p class="price">$24.99</p>
-                    <p>Stimulates your pet's brain, slows down eating to aid digestion, and is dishwasher safe. Purrfect
-                        for your pet!</p>
-                    <p>Category: Food & Treats</p>
+                <div class="product-card feeder">
+                    <img src="images/puzzle-cat.webp" alt="cat solving a puzzle">
+                    <h1>Puzzle Feeder</h1>
+                    <div class="product-info">
+                        <p class="price">$24.99</p>
+                        <p>Stimulates your pet's brain, slows down eating to aid digestion, and is dishwasher safe.
+                            Purrfect
+                            for your pet!</p>
+                        <p>Category: Food & Treats</p>
+                    </div>
+                    <button class="cart-button">Add to Cart</button>
                 </div>
-                <button class="cart-button">Add to Cart</button>
-            </div>
-            <div class="product-card collar">
-                <img src="images/dog-collar.webp" alt="dog with a collar">
-                <h1>Safety Collar</h1>
-                <div class="product-info">
-                    <p class="price">$12.99</p>
-                    <p>Adjustable, comes with a reflective strip for night walks, and includes a tag for
-                        personalization.
-                    </p>
-                    <p>Category: Accesories</p>
+                <div class="product-card collar">
+                    <img src="images/dog-collar.webp" alt="dog with a collar">
+                    <h1>Safety Collar</h1>
+                    <div class="product-info">
+                        <p class="price">$12.99</p>
+                        <p>Adjustable, comes with a reflective strip for night walks, and includes a tag for
+                            personalization.
+                        </p>
+                        <p>Category: Accesories</p>
+                    </div>
+                    <button class="cart-button">Add to Cart</button>
                 </div>
-                <button class="cart-button">Add to Cart</button>
-            </div>
-            <div class="product-card catnip">
-                <img src="images/catnip.webp" alt="cat with catnip">
-                <h1>Catnip Scratch Post</h1>
-                <div class="product-info">
-                    <p class="price">$34.99</p>
-                    <p>This scratch post is made with durable sisal fibers, ideal for encouraging your cat's natural
-                        scratching instincts; infused with catnip.
-                    </p>
-                    <p>Category: Accesories</p>
+                <div class="product-card catnip">
+                    <img src="images/catnip.webp" alt="cat with catnip">
+                    <h1>Catnip Scratch Post</h1>
+                    <div class="product-info">
+                        <p class="price">$34.99</p>
+                        <p>This scratch post is made with durable sisal fibers, ideal for encouraging your cat's natural
+                            scratching instincts; infused with catnip.
+                        </p>
+                        <p>Category: Accesories</p>
+                    </div>
+                    <button class="cart-button">Add to Cart</button>
                 </div>
-                <button class="cart-button">Add to Cart</button>
-            </div>
-            <div class="product-card waterbottle">
-                <img src="images/poratbledogwaterbottle.jpg" alt="dog with water bottle">
-                <div class="product-info">
-                    <h1>Portable Water Bottle</h1>
-                    <p class="price">$19.99</p>
-                    <p>Leak-proof, holds up to 20oz of water, and comes with a foldable bowl cap. Perfect for walks and
-                        hikes.
-                    </p>
-                    <p>Category: Accesories</p>
+                <div class="product-card waterbottle">
+                    <img src="images/poratbledogwaterbottle.jpg" alt="dog with water bottle">
+                    <div class="product-info">
+                        <h1>Portable Water Bottle</h1>
+                        <p class="price">$19.99</p>
+                        <p>Leak-proof, holds up to 20oz of water, and comes with a foldable bowl cap. Perfect for walks
+                            and
+                            hikes.
+                        </p>
+                        <p>Category: Accesories</p>
+                    </div>
+                    <button class="cart-button">Add to Cart</button>
                 </div>
-                <button class="cart-button">Add to Cart</button>
-            </div>
 
-            <div class="product-card wastebag">
-                <img src="images/poop-bag.png" alt="eco-friendly waste bag">
-                <h1>Eco-Waste Bags</h1>
-                <div class="product-info">
-                    <p class="price">$6.99</p>
-                    <p>Biodegradable bags that are strong, leak-proof, and come with a handy dispenser that attaches to
-                        a
-                        leash.
-                    </p>
-                    <p>Category: Cleanup & Odor Control</p>
+                <div class="product-card wastebag">
+                    <img src="images/poop-bag.png" alt="eco-friendly waste bag">
+                    <h1>Eco-Waste Bags</h1>
+                    <div class="product-info">
+                        <p class="price">$6.99</p>
+                        <p>Biodegradable bags that are strong, leak-proof, and come with a handy dispenser that attaches
+                            to
+                            a
+                            leash.
+                        </p>
+                        <p>Category: Cleanup & Odor Control</p>
+                    </div>
+                    <button class="cart-button">Add to Cart</button>
                 </div>
-                <button class="cart-button">Add to Cart</button>
-            </div>
-            <div class="product-card carrier">
-                <img src="images/cat-carrier.webp" alt="cat in pet carrier">
-                <h1>Luxury Pet Carrier</h1>
-                <div class="product-info">
-                    <p class="price">$59.99</p>
-                    <p>Stylish design, breathable mesh windows, and plush bedding inside. Approved by most airlines for
-                        in-cabin travel.
-                    </p>
-                    <p>Category: Accessories</p>
+                <div class="product-card carrier">
+                    <img src="images/cat-carrier.webp" alt="cat in pet carrier">
+                    <h1>Luxury Pet Carrier</h1>
+                    <div class="product-info">
+                        <p class="price">$59.99</p>
+                        <p>Stylish design, breathable mesh windows, and plush bedding inside. Approved by most airlines
+                            for
+                            in-cabin travel.
+                        </p>
+                        <p>Category: Accessories</p>
+                    </div>
+                    <button class="cart-button">Add to Cart</button>
                 </div>
-                <button class="cart-button">Add to Cart</button>
             </div>
         </div>
     </main>
