--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
     <main>
         <div class="wrapper">
             <aside>
-                <iframe src="partials/aside-products.html" class="products-aside"></iframe>
+                <iframe src="partials/aside-products.html" class="products-aside auto-height-iframe"></iframe>
             </aside>
             <div class="product-container">
                 <div class="product-card bed">
