update footer with index

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="banner-text">
                 <h1>Bestsellers for your best friend!</h1>
-                <h2>Discover our <strong>most loved</strong> pet essentials:</h2>
+                <h2>Discover our most loved pet essentials:</h2>
                 <ul>
                     <li>Cozy beds</li>
                     <li>Chew toys</li>
@@ -30,6 +30,9 @@
             </div>
         </section>
     </main>
+    <footer>
+        <iframe class="auto-height-iframe" src="partials/footer.html" width="100%"></iframe>
+    </footer>
 </body>
 
 </html>
