create about page

--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <header>
-        <iframe class="auto-height-iframe" src="partials/navigation.html" width="100%"></iframe>
-    </header>
+    <object>
+        <header>
+            <iframe class="auto-height-iframe" src="partials/navigation.html" width="100%"></iframe>
+        </header>
+    </object>
     <script src="javascript.js"></script>
     <main>
         <section class="banner-container">
-            <div class="banner-photo">
-
-            </div>
+            <div class="banner-photo"></div>
             <div class="banner-text">
                 <h1>Bestsellers for your best friend!</h1>
                 <h2>Discover our most loved pet essentials:</h2>
@@ -30,9 +30,11 @@
             </div>
         </section>
     </main>
-    <footer>
-        <iframe class="auto-height-iframe" src="partials/footer.html" width="100%"></iframe>
-    </footer>
+    <object>
+        <footer>
+            <iframe class="auto-height-iframe" src="partials/footer.html" width="100%"></iframe>
+        </footer>
+    </object>
 </body>
 
 </html>
