--- a/products.html
+++ b/products.html
@@ -150,6 +150,11 @@
             </div>
         </div>
     </main>
+    <object>
+        <footer>
+            <iframe class="auto-height-iframe" src="partials/footer.html" width="100%"></iframe>
+        </footer>
+    </object>
 </body>
 
 </html>
