--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,16 @@
         </header>
     </object>
     <script src="javascript.js"></script>
+    <main>
+        <section class="featured-blog">
+            <article class="blog-post">
+                <img src="images/dog_and_cat_blog.jpeg" alt="a woman with her pet">
+                <h2>Tips for a Happier, Healthier Pet</h2>
+                <p>Discover the secrets to boosting your pet's mood and well-being with our top tips.
+                </p>
+            </article>
+        </section>
+    </main>
 </body>
 
 </html>
